--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ body {
     background: #1A103D;
   }
   
+  p img {
+    width: 50px;
+    height: 50px;
+  }
+  
   .logo-img {
     height: 100px;
   }
