--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,30 @@ body {
     transition: background 0.3s;
   }
   
+
+  .project-lang-image-container{
+    display: flex;
+    justify-content: center;
+  }
+
+  .project-lang-image {
+    filter: invert(100%);
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
+    border: 1px solid darkcyan;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 1px;
+  }
+
+  .portfolio h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    color: #FFB84D;
+    margin-bottom: 20px;
+  }
+
+  
   
  /* Carousel delle Skills */
 .skills-carousel {
